--- a/app/globals.css
+++ b/app/globals.css
@@ -1,63 +1,36 @@
 * {
+  font-family: sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.hero {
-  margin-top: 55px;
-  height: 100vh;
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.hero-left-section {
-  background-color: green;
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.hero-right-section {
-  background-color: blue;
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.hero-right-section > h2 {
-  padding: 20px;
-  text-transform: capitalize;
-}
-
-.contact {
-  height: 60vh;
+.navbar {
+  background-color: rgb(20, 163, 59);
+  height: 60px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  border-bottom: 2px solid rgb(28, 69, 158);
 }
 
-.contact > form {
-  background-color: rgb(121, 84, 84);
-  height: 80%;
-  width: 50%;
+.navbar>h2>a {
+  text-decoration: none;
+  margin-left: 30px;
+  color: white;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+nav>ul {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  list-style: none;
+  gap: 30px;
+  margin-right: 40px;
 }
 
-.contact > form > label {
-  margin-bottom: 4px;
-}
-
-.contact > form > input {
-  margin-bottom: 8px;
-  height: 28px;
-  width:200px;
-  border-radius: 4px;
-  border: none;
+nav>ul>li>a {
+  text-decoration: none;
+  font-size: 17px;
+  color: white;
 }
